--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "introcs": "^0.0.9"
+    "introcs": "0.1.0"
   },
   "devDependencies": {
     "bluebird": "^3.5.0",
