added package-lock.json to vscode excluded files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "**/build": true,
         "**/lib": true,
         "package.json": true,
+        "package-lock.json": true,
         "tsconfig.json": true,
         "tslint.json": true
     },
